# flower-hands-on

./: check_gpu.py
.github/workflows/: build-images.yml
bert-finetune/: .gitignore  mrpc.py  mrpc_log.txt  mrpc_summary.md  pyproject.toml
bert-lora/: mrpc_lora.py  mrpc_lora_summary.md  pyproject.toml  training_resource_log-150train_20val_4thread.csv
common/: trainer_callback.py
distilbert-lora/: mrpc_lora.py  pyproject.toml  sst2_lora.py  training_resource_log-sst2.csv  training_resource_log-sst2_1thread_16bs.csv  training_resource_log-sst2_200train_50eval_3epoch.csv
flower-docker/: README.md  pyproject.toml
flower-docker/quickstart_docker/: __init__.py  client_app.py  server_app.py  task.py
flower-tutorial/: pyproject.toml
flowertune-distilbert/: .gitignore  client_groups.toml  flwr_infra.py  pyproject.toml
flowertune-distilbert/docker/deploy/: Dockerfile  docker-compose.yaml  superlink.Dockerfile  supernode.Dockerfile
flowertune-distilbert/docker/deploy-shared/: docker-compose.yaml  run.sh  stop.sh  superlink.Dockerfile  supernode.Dockerfile
flowertune-distilbert/docker/simulation/: docker-compose.yaml
flowertune-distilbert/flowertune_distilbert/: client_app.py  dataset.py  models.py  server_app.py  strategy.py  utils.py
flowertune-distilbert/scripts/: docker.run.sh  run.sh
flowertune-llm/: pyproject.toml
flowertune-modernbert/: .dockerignore  pyproject.toml
flowertune-modernbert-lora/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  setup-env.sh
flowertune-modernbert-lora/flowertune_modernbert_lora/: client_app.py  server_app.py
flowertune-modernbert-lora/scripts/qnli/: flowertune_modernbert_lora.sh
flowertune-modernbert-lora/scripts/qqp/: flowertune_modernbert_lora.sh
flowertune-modernbert-lora/scripts/sst2/: flowertune_modernbert_lora.sh
flowertune-modernbert/flowertune_modernbert/: __init__.py  client_app.py  models.py  server_app.py
flowertune-modernbert/scripts/: docker.run.sh  flower_test.sh  run.sh
flowertune-modernbert/scripts/sst2/: docker.flowertune_modernbert_lora.sh  flowertune_modernbert_lora.sh
flowertune-tinybert/: .gitignore  pyproject.toml  setup-env.sh
flowertune-tinybert-lora/: README.md  pyproject.toml
flowertune-tinybert-lora/flowertune_tinybert_lora/: client_app.py  dataset.py  models.py  server_app.py
flowertune-tinybert/flowertune_tinybert/: __init__.py  client_app.py  dataset.py  models.py  server_app.py
flowertune-tinybert/scripts/: docker.run.sh  flower_test.sh  run.sh  setup-env.sh
flowertune-tinybert/scripts/qqp/: flowertune_tinybert.sh
flowertune-tinybert/scripts/sst2/: flowertune_tinybert.sh
modernbert-lora/: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
modernbert-lora/common/: .gitignore  resource_monitor.py  trainer_callback.py
modernbert-lora/modernbert_lora/: __init__.py  dataset.py  models.py  train.py
modernbert-lora/scripts/qnli/: modernbert_lora.sh
modernbert-lora/scripts/qqp/: modernbert_lora.sh
modernbert-lora/scripts/sst2/: docker.modernbert_lora.sh  modernbert_lora.sh  sif.modernbert_lora.sh
quickstart-pytorch/: README.md  pyproject.toml
tinybert-lora/: .gitignore  Dockerfile  docker-compose.yaml  docker.sst2.tinybert_lora.sh  imdb_lora.py  pyproject.toml  qnli_lora.py  qqp_lora.py  sif.sst2.tinybert_lora.sh  sst2.tinybert_lora.sh  sst2_lora.py  training_resource_log-imdb.csv  training_resource_log-qnli.csv  training_resource_log-qqp_1epochs_1ktrain_200val_1thread.csv  training_resource_log-qqp_3epochs_5ktrain_500val.csv  training_resource_log-sst2.csv  training_resource_log-sst2_10epochs_10ktrain_1kval.csv  training_resource_log-sst2_1thread.csv  training_resource_log-sst2_200train_50val_3epoch.csv
tinybert-lora/tinybert_lora/: __init__.py  dataset.py  models.py  train.py  utils.py
wandb-trial/: .gitignore  pyproject.toml  quickstart.py
